[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mortgage-calc"
version = "0.1.0"
description = "Mortgage calculator to answer niche questions"
authors = [
  { name="Marco Virgili", email="marco.virgili15@gmail.com" }
]
package-mode = false
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "streamlit",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]