[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "mortgage-calc"
version = "0.1.0"
description = "Mortgage calculator to answer niche questions"
authors = ["Marco Virgili, marco.virgili15@gmail.com"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.24.0"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]


